kubernetes/apps/observability/kube-prometheus-stack/app/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  hostnames:
    - prometheus.darkfellanetwork.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: kube-prometheus-stack-prometheus
          port: 9090
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-api
spec:
  hostnames:
    - prometheus.darkfellanetwork.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: kube-prometheus-stack-prometheus
          port: 9090
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
spec:
  hostnames:
    - alertmanager.darkfellanetwork.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-api
spec:
  hostnames:
    - alertmanager.darkfellanetwork.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api
